Refactoring, fixes, open api.
